Bug 208648 - REGRESSION: (r257760?) [ Mac wk2 Debug ] ASSERTION FAILED: child->parentObject() == this in WebCore::AccessibilityObject::insertChild
Summary: REGRESSION: (r257760?) [ Mac wk2 Debug ] ASSERTION FAILED: child->parentObjec...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Accessibility (show other bugs)
Version: WebKit Nightly Build
Hardware: Mac macOS 10.15
: P2 Normal
Assignee: Andres Gonzalez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-03-05 09:36 PST by Jason Lawrence
Modified: 2020-03-07 19:59 PST (History)
13 users (show)

See Also:


Attachments
append-node-under-document-crash-log (85.51 KB, text/plain)
2020-03-05 09:36 PST, Jason Lawrence
no flags Details
Patch (1.77 KB, patch)
2020-03-07 17:35 PST, Andres Gonzalez
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jason Lawrence 2020-03-05 09:36:23 PST
Created attachment 392587 [details]
append-node-under-document-crash-log

editing/execCommand/append-node-under-document.html

Description:
This test is flaky crashing on Mac wk2 Debug. It appears to have a regression point of r257760.

History:
https://results.webkit.org/?suite=layout-tests&test=editing%2FexecCommand%2Fappend-node-under-document.html&style=debug&flavor=wk2&flavor=gpuprocess&platform=mac&limit=50000

Crash log attached;
ASSERTION FAILED: child->parentObject() == this
./accessibility/AccessibilityObject.cpp(496) : virtual void WebCore::AccessibilityObject::insertChild(WebCore::AXCoreObject *, unsigned int)
1   0x23188db29 WTFCrash
2   0x214d7bdeb WTFCrashWithInfo(int, char const*, char const*, int)
3   0x216f7e1a5 WebCore::AccessibilityObject::insertChild(WebCore::AXCoreObject*, unsigned int)
Comment 1 Radar WebKit Bug Importer 2020-03-05 09:36:53 PST
<rdar://problem/60087221>
Comment 2 Jason Lawrence 2020-03-05 10:09:14 PST
I can reproduce this issue on r257778, but cannot reproduce it on r257745. 

Command: run-webkit-tests --iterations 1000 --exit-after-n-failures 3 --force -f --no-retry --debug editing/execCommand/append-node-under-document.html

r25778:
[6/1000] editing/execCommand/append-node-under-document.html failed unexpectedly (com.apple.WebKit.Networking.Development crashed [pid=1766])
[6/1000] editing/execCommand/append-node-under-document.html failed unexpectedly (com.apple.WebKit.Networking.Development crashed [pid=1768])
[6/1000] editing/execCommand/append-node-under-document.html failed unexpectedly (com.apple.WebKit.Networking.Development crashed [pid=1774])
Exiting early after 3 failures. 3 tests run.
0 tests ran as expected, 3 didn't (997 didn't run):

r257745:
All 1000 tests ran as expected.
Comment 3 Jason Lawrence 2020-03-05 11:45:58 PST
I have marked this test as failing while this issue is investigated.
https://trac.webkit.org/changeset/257937/webkit
Comment 4 Jason Lawrence 2020-03-06 12:50:33 PST
I have removed the test expectations here: https://trac.webkit.org/changeset/258023/webkit
Comment 5 Andres Gonzalez 2020-03-07 17:35:24 PST
Reopening to attach new patch.
Comment 6 Andres Gonzalez 2020-03-07 17:35:25 PST
Created attachment 392919 [details]
Patch
Comment 7 WebKit Commit Bot 2020-03-07 19:59:02 PST
Comment on attachment 392919 [details]
Patch

Clearing flags on attachment: 392919

Committed r258094: <https://trac.webkit.org/changeset/258094>
Comment 8 WebKit Commit Bot 2020-03-07 19:59:04 PST
All reviewed patches have been landed.  Closing bug.