REGRESSION: (r257760?) [ Mac wk2 Debug ] ASSERTION FAILED: child->parentObject() == this in WebCore::AccessibilityObject::insertChild https://bugs.webkit.org/show_bug.cgi?id=208648

Reviewed by Chris Fleizach.

[WebAccessibilityObjectWrapper textMarkerRangeFromVisiblePositions] must
not update the backing store but instead just get the backing object.

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper textMarkerRangeFromVisiblePositions:endPosition:]):


Canonical link: https://commits.webkit.org/221703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258094 268f45cc-cd09-0410-ab3c-d52691b4dbfc